upd to edc 10.4+ replacing deprecated api calls